test/CheckError/Datatype/CopyMultiLevelNonCopyableDatatype.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// Not implicitly copyable.
}

datatype TestDatatype1(TestClass object);

datatype TestDatatype2(int value, TestDatatype1 object);

datatype TestDatatype3(TestDatatype2 object);

TestDatatype3 doImplicitCopy(TestDatatype3 value) {
	// CHECK: .loci:16:2: error: unable to copy type 'TestDatatype3' because it doesn't have a valid 'implicitcopy' method, in cast from type 'TestDatatype3&' to type 'TestDatatype3'
	return value;
}

// CHECK: 1 error generated.
